@@ -2,7 +2,7 @@
 # Kernel/System/DB.pm - the global database wrapper to support different databases
 # Copyright (C) 2001-2011 OTRS AG, http://otrs.org/
 # --
-# $Id: DB.pm,v 1.127.2.4 2011/11/22 10:45:06 jp Exp $
+# $Id: DB.pm,v 1.127.2.5 2011/12/12 16:20:20 jp Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -19,7 +19,7 @@ use DBI;
 use Kernel::System::Time;
 
 use vars qw(@ISA $VERSION);
-$VERSION = qw($Revision: 1.127.2.4 $) [1];
+$VERSION = qw($Revision: 1.127.2.5 $) [1];
 
 =head1 NAME
 
@@ -1029,6 +1029,8 @@ sub QueryCondition {
     my $Word  = '';
     my $Not   = 0;
 
+    my $SpecialCharacters = $Self->_SpecialCharactersGet();
+
     POSITION:
     for my $Position ( 0 .. $#Array ) {
 
@@ -1040,10 +1042,7 @@ sub QueryCondition {
             (
                 $Position > 0
                 && $Array[ $Position - 1 ] eq '\\'
-                && (
-                    $Array[$Position] eq '('
-                    || $Array[$Position] eq ')'
-                )
+                && $SpecialCharacters->{ $Array[$Position] }
             )
 
             # "default" case: don't add brackets, etc. to a word being searched for
@@ -1199,6 +1198,42 @@ sub QueryCondition {
     return $SQL;
 }
 
+=item QueryStringEscape()
+
+escapes special characters within a query string
+
+    my $QueryStringEscaped = $DBObject->QueryStringEscape(
+        QueryString => 'customer with (brackets) and & and -',
+    );
+
+    Result would be a string in which all special characters are escaped.
+    Special characters are those which are returned by _SpecialCharactersGet().
+
+    $QueryStringEscaped = 'customer with \(brackets\) and \& and \-';
+
+=cut
+
+sub QueryStringEscape {
+    my ( $Self, %Param ) = @_;
+
+    # check needed stuff
+    for my $Key (qw(QueryString)) {
+        if ( !defined $Param{$Key} ) {
+            $Self->{LogObject}->Log( Priority => 'error', Message => "Need $_!" );
+            return;
+        }
+    }
+
+    # Merge all special characters into one string, separated by \\
+    my $SpecialCharacters = '\\' . join '\\', keys %{ $Self->_SpecialCharactersGet() };
+
+    # Use above string of special characters as character class
+    # note: already escaped special characters won't be escaped again
+    $Param{QueryString} =~ s{(?<!\\)([$SpecialCharacters])}{\\$1}smxg;
+
+    return $Param{QueryString};
+}
+
 =begin Internal:
 
 =cut
@@ -1268,6 +1303,19 @@ sub _NameCheck {
     return 1;
 }
 
+sub _SpecialCharactersGet {
+    my ( $Self, %Param ) = @_;
+
+    my %SpecialCharacter = (
+        '(' => 1,
+        ')' => 1,
+        '&' => 1,
+        '-' => 1,
+    );
+
+    return \%SpecialCharacter;
+}
+
 sub DESTROY {
     my $Self = shift;
 
@@ -1298,6 +1346,6 @@ did not receive this file, see L<http://www.gnu.org/licenses/agpl.txt>.
 
 =head1 VERSION
 
-$Revision: 1.127.2.4 $ $Date: 2011/11/22 10:45:06 $
+$Revision: 1.127.2.5 $ $Date: 2011/12/12 16:20:20 $
 
 =cut
